# circleci-dynamic-config-example

./: .env.local  .env.test  .eslintrc.js  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rollup.config.js
.circleci/: config.yml  continue_config.yml
client/: Cargo.toml
client/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  route.rs
shared/src/: lib.rs
src/: plain.js
