[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"
console_error_panic_hook = "0.1.6"
shared = { path = "../shared" }

[dependencies.web-sys]
version = "0.3.60"
features = [
  'Document',
  'Event',
  'HtmlInputElement',
  'Window',
]
